--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <title>Ejercicio 5</title>
 </head>
 
@@ -45,7 +42,16 @@
     </header>
     <main class="container text-center">
         <h1 class="mb-3">Ejercicio 5: Cronometro</h1>
-
+        <section class="bg-black bg-gradient p-3">
+            <div>
+                <h1 id="marcador">00:00:00</h1>
+            </div>
+            <div class="btn-container">
+                <button id="start" class="btn btn-success">Iniciar</button>
+                <button id="pause" class="btn btn-warning">Pausar</button>
+                <button id="reset" class="btn btn-danger">Resetear</button>
+            </div>
+        </section>
     </main>
     <footer class="bg-secondary-subtle text-center py-3 mt-5">
         <p class="mb-0">Todos los derechos reservados &copy; 2024</p>
